--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Get the latest release stats like download counts, release dates, author on any Github project">
     <meta name="keywords" content="Github, release, download, count">
     <link rel="icon" href="img/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet" type="text/css">
+    <!--<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet" type="text/css">-->
     <link rel="stylesheet" href="third-party/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="https://github.com/Somsubhra/github-release-stats" target="_blank">
+                        <a href="https://github.com/ikameshi-hut/github-release-stats" target="_blank">
                             <span class="glyphicon glyphicon-eye-open"></span>&nbsp;
                             View project on Github
                         </a>
@@ -61,7 +61,9 @@
         </div>
         <div class="row" id="ads">
             <div class="col-md-6 col-md-offset-2">
+                <!--
                 <script type="text/javascript">
+
                   ( function() {
                     if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
                         var unit = {"calltype":"async[2]","publisher":"somsubhra","width":728,"height":90,"sid":"Chitika Default"};
@@ -71,6 +73,7 @@
                     }());
                 </script>
                 <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
+            -->
             </div>
         </div>
         <div class="row" id="stats-result">
@@ -100,7 +103,7 @@
     </div>
     <div id="footer">
         <div class="container">
-            Made with <span class="glyphicon glyphicon-heart"></span> by <a href="http://somsubhra.com" target="_blank">Somsubhra</a>
+            Made with <span class="glyphicon glyphicon-heart"></span> by <a href="http://somsubhra.com" target="_blank">Somsubhra</a>. Privacy enhanced with <span class="glyphicon glyphicon-heart"></span> by <a href="http://github.com/ikameshi-hut" target="_blank">ikameshi</a>.
         </div>
     </div>
 </body>
@@ -108,6 +111,7 @@
 <script type="text/javascript" src="third-party/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="third-party/typahead/bootstrap3-typeahead.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<!--
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -117,4 +121,5 @@
   ga('create', 'UA-58580258-2', 'auto');
   ga('send', 'pageview');
 </script>
+-->
 </html>
