--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Github Release Stats</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Get the latest release stats like download counts, release dates, author on any Github project">
-    <meta name="keywords" content="Github, release, download, count">
+    <meta name="keywords" content="Github, release, download, count, privacy">
     <link rel="icon" href="img/favicon.ico">
     <!--<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet" type="text/css">-->
     <link rel="stylesheet" href="third-party/bootstrap/css/bootstrap.min.css">
