--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Get the latest release stats like download counts, release dates, author on any Github project">
     <meta name="keywords" content="Github, release, download, count, privacy">
     <link rel="icon" href="img/favicon.ico">
+    <!--<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet" type="text/css">-->
     <link rel="stylesheet" href="third-party/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/langchange.css">
@@ -83,6 +84,19 @@
         </div>
         <div class="row" id="ads">
             <div class="col-md-6 col-md-offset-2">
+                <!--
+                <script type="text/javascript">
+
+                  ( function() {
+                    if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
+                        var unit = {"calltype":"async[2]","publisher":"somsubhra","width":728,"height":90,"sid":"Chitika Default"};
+                        var placement_id = window.CHITIKA.units.length;
+                        window.CHITIKA.units.push(unit);
+                        document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
+                    }());
+                </script>
+                <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
+            -->
             </div>
         </div>
         <div class="row" id="stats-result">
@@ -121,4 +135,15 @@
 <script type="text/javascript" src="third-party/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="third-party/typahead/bootstrap3-typeahead.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<!--
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-58580258-2', 'auto');
+  ga('send', 'pageview');
+</script>
+-->
 </html>
