--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/langchange.css">
 </head>
 <body>
-    <!--Avobe this sentence is the area language can be changed-->
+    <!--Below this sentence is the area language can be changed-->
     <div id="langChange">
 
     <nav class="navbar navbar-default" role="navigation">
