English sentence modified

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                     <button class="btn btn-primary" id="get-stats-button">
                         <span lang="ja">リリース情報取得</span>  
-                        <span lang="en">Get the latest release stats!</span>
+                        <span lang="en">Get release stats</span>
                     </button>
                 </div>
             </div>
@@ -87,7 +87,7 @@
             
             <h1>
                 <p lang="ja">青ボタンでダウンロード数、リリース日、作者情報を出力</p>  
-                <p lang="en">...and get the latest release stats like download counts, release dates, authors for any Github project.</p>
+                <p lang="en">...and press blue button to get download counts, release dates, authors for any Github project.</p>
             </h1>
         </div>
         <div class="row" id="title">
